Add clarifying code block snippets to README.